force-app/main/default/objects/student__c/fields/Confirm_Gender__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Gender__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you are open about gender.</inlineHelpText>
    <label>Confirm Gender</label>
    <type>Checkbox</type>
</CustomField>