force-app/main/default/objects/student__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>Select Subject as per your course</inlineHelpText>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Branch__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>SOM</fullName>
            </value>
            <value>
                <fullName>TOM</fullName>
            </value>
            <value>
                <fullName>Mechanics</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Basic Electrical</fullName>
            </value>
            <value>
                <fullName>Electromagnetism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>