force-app/main/default/objects/student__c/recordTypes/Existing_Student.recordType-meta.xml
<RecordType>
    <fullName>Existing_Student</fullName>
    <active>true</active>
    <label>Existing Student</label>
</RecordType>