force-app/main/default/objects/student__c/recordTypes/New_Student.recordType-meta.xml
<RecordType>
    <fullName>New_Student</fullName>
    <active>true</active>
    <label>New Student</label>
</RecordType>