force-app/main/default/objects/student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>DOB__c</columns>
    <columns>X10th_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>